--- a/index.html
+++ b/index.html
@@ -10,20 +10,30 @@
 </head>
 
 <body>
-    <form action="">
-        <label for="nomeCognome">Nome e cognome</label>
-        <input id="nomeCognome" type="text" name="text">
-        <label for="kmPercorsi">Km da percorrere</label>
-        <input id="kmPercorsi" type="number" min="1" name="text">
-        <label for="eta">Fascia d'età</label>
-        <input type="number" name="eta" id="eta" min="1">
-        <button id="button">Genera</button>
-        <button type="reset">Annulla</button>
-    </form>
 
-    <div id="generatoreS">
+    <div>
+        <h2>nome e cognome</h2>
+        <input id="input" type="text">
+
+        <h2>km da percorrere</h2>
+        <input id="numeroKm" type="number">
+
+        <h2>fascia d'eta</h2>
+        <input id="eta" type="number">
+
+        <br>
+
+        <button id="button">Genera</button>
+    </div>
+
+    <div id="nomePassegero">
 
     </div>
+
+    <div id="generatore">
+
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 
