--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div>
+    <form action="">
         <h2>nome e cognome</h2>
         <input id="input" type="text">
 
@@ -23,14 +23,23 @@
 
         <br>
 
-        <button id="button">Genera</button>
-    </div>
+        <button type="button" id="button">Genera</button>
+        <button type="reset">Annulla</button>
+    </form>
 
     <div id="nomePassegero">
 
     </div>
 
     <div id="generatore">
+
+    </div>
+
+    <div id="carrozza">
+
+    </div>
+
+    <div id="codiceCP">
 
     </div>
 
