--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="bg-danger">
+<body>
     <section class="bigliettoTreno">
         <div class="container">
 
@@ -51,9 +51,9 @@
                         </h2>
                     </div>
 
-                    <div class="d-flex justify-content-center p-4">
-                        <div>
-                            <div class="p-4">
+                    <div class="d-flex justify-content-center principal">
+                        <div class="bg-warning">
+                            <div class="p-4 ">
                                 <h2>Nome Passeggero</h2>
                             </div>
                             <div id="nomePassegero" class="text-center">
@@ -61,7 +61,7 @@
                             </div>
                         </div>
 
-                        <div >
+                        <div>
                             <div class="p-4">
                                 <h2>Offerta</h2>
                             </div>
@@ -70,7 +70,7 @@
                             </div>
                         </div>
 
-                        <div >
+                        <div>
                             <div class="p-4">
                                 <h2>Carrozza</h2>
                             </div>
